--- a/style.css
+++ b/style.css
@@ -1,54 +1,83 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+h1 {
+    text-align: center; 
+    margin-top: 20px; 
+    color: rgb(21, 15, 77); 
+    font-family: "Inter", serif;
+    font-weight: 400;
+}
 
-        @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
-        
-        #map {
-            width: 60%; 
-            height: 70vh; 
-            margin: 20px auto; 
-            float: left
-        }
-        #addLocationForm {
-            margin: 20px;
-            text-align: center;
-        }
-        /*#title {
+h2{
+    text-align: center; 
+    color: rgb(30, 23, 92); 
+    font-family: "Inter", serif;
+    font-weight: 400;
+}
 
-        }
-        /* tab style */
-        .tab {
-            display: flex;
-            cursor: pointer;
-            padding: 10px;
-            background-color: #f1f1f1;
-            border: 1px solid #ccc;
-            border-bottom: none;
-        }
-        .tab button {
-            background-color: inherit;
-            border: none;
-            outline: none;
-            padding: 10px 20px;
-            transition: background-color 0.3s;
-        }
-        .tab button:hover {
-            background-color: #ddd;
-        }
-        .tab button.active {
-            background-color: #ccc;
-        }
-        /* stuff in tab */
-        .tab-content {
-            display: none;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-top: none;
-        }
-        .tab-content.active {
-            display: block;
-        }
-        /* .center {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 40%;
-        } */
+#selectfilter {
+    text-align: center; 
+    color: rgb(30, 23, 92); 
+    font-family: "Inter", serif;
+    font-weight: 300;
+}
+
+#map {
+    width: 60%; 
+    height: 70vh; 
+    margin: 20px auto; 
+    float: left;
+}
+#layerDropdown, #addLocationForm {
+    margin: 20px;
+    text-align: center;
+}
+#layerDropdown select, #addLocationForm select {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 60%;
+}
+#addLocationForm select {
+    width: auto; /* the n ew drop down more compact*/
+    display: inline-block;
+}
+
+#addLocationForm {
+    margin-top: 50px;
+    text-align: center; 
+    color: rgb(30, 23, 92); 
+    font-family: "Inter", serif;
+    font-weight: 300;
+    font-size: 15px;
+}
+.tab {
+    display: flex;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-bottom: none;
+}
+.tab button {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    transition: background-color 0.3s;
+}
+.tab button:hover {
+    background-color: #ddd;
+}
+.tab button.active {
+    background-color: #ccc;
+}
+.tab-content {
+    display: none;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+.tab-content.active {
+    display: block;
+}
