--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@ h2{
     margin: 20px auto; 
     float: left;
 }
+
+select {
+    font-family: "Inter", sans-serif;
+    color: rgb(30, 23, 92);
+    font-size: 15px;
+    font-style: italic;
+}
+
 #layerDropdown, #addLocationForm {
     margin: 20px;
     text-align: center;
@@ -43,14 +51,43 @@ h2{
     display: inline-block;
 }
 
+#addLocationForm h2 {
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
 #addLocationForm {
-    margin-top: 50px;
+    margin-top: 150px;
     text-align: center; 
     color: rgb(30, 23, 92); 
-    font-family: "Inter", serif;
-    font-weight: 300;
-    font-size: 15px;
+    font-family: "Inter", sans-serif;
+    font-size: 13px;
 }
+
+input[type=text] {
+    font-family: "Inter", serif;
+    color: rgb(30, 23, 92); 
+    font-weight: 600;
+}
+input[type=text]:focus {
+    border: 2px solid #9687a6;
+    outline: none;
+}
+
+textarea {
+    font-family: "Inter", serif;
+    color: rgb(30, 23, 92); 
+    font-weight: 600;
+    font-size: 13px;
+}
+
+textarea:focus {
+    border: 2px solid #9687a6;
+    outline: none;
+}
+
 .tab {
     display: flex;
     cursor: pointer;
@@ -59,18 +96,25 @@ h2{
     border: 1px solid #ccc;
     border-bottom: none;
 }
+
 .tab button {
     background-color: inherit;
     border: none;
     outline: none;
     padding: 10px 20px;
     transition: background-color 0.3s;
+    font-family: "Inter", sans-serif;
+    font-size: 17px;
+    font-weight: 300;
+    color: rgb(30, 23, 92);
+    font-style: italic;
 }
 .tab button:hover {
-    background-color: #ddd;
+    background-color: #dfd9e6;
+    text-decoration-line: underline;
 }
 .tab button.active {
-    background-color: #ccc;
+    background-color: #ac9cbd;
 }
 .tab-content {
     display: none;
@@ -81,3 +125,4 @@ h2{
 .tab-content.active {
     display: block;
 }
+
