--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+body{
+    margin: 0;
+}
 h1 {
     text-align: center; 
-    margin-top: 20px; 
     color: rgb(21, 15, 77); 
     font-family: "Inter", serif;
     font-weight: 400;
+    font-size: 40px;
 }
 
 h2{
@@ -64,12 +67,26 @@ select {
     color: rgb(30, 23, 92); 
     font-family: "Inter", sans-serif;
     font-size: 13px;
+    background-color: rgb(206, 205, 221); 
+    border-radius: 5px;
+    padding: 15px;
+    margin-left: 880px;
+}
+
+#addLocationForm button {
+    font-family: "Inter", sans-serif;
+    color: rgb(30, 23, 92);
+    background-color: rgb(182, 180, 203);
+    font-weight: 350;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 input[type=text] {
     font-family: "Inter", serif;
     color: rgb(30, 23, 92); 
     font-weight: 600;
+    border-radius: 6px;
 }
 input[type=text]:focus {
     border: 2px solid #9687a6;
@@ -95,6 +112,7 @@ textarea:focus {
     background-color: #f1f1f1;
     border: 1px solid #ccc;
     border-bottom: none;
+    justify-content: space-evenly;
 }
 
 .tab button {
@@ -104,17 +122,16 @@ textarea:focus {
     padding: 10px 20px;
     transition: background-color 0.3s;
     font-family: "Inter", sans-serif;
-    font-size: 17px;
+    font-size: 20px;
     font-weight: 300;
     color: rgb(30, 23, 92);
     font-style: italic;
 }
 .tab button:hover {
-    background-color: #dfd9e6;
     text-decoration-line: underline;
 }
 .tab button.active {
-    background-color: #ac9cbd;
+    text-decoration-line: underline;
 }
 .tab-content {
     display: none;
