--- a/style.css
+++ b/style.css
@@ -57,29 +57,34 @@ select {
 #addLocationForm h2 {
     font-family: "Inter", sans-serif;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 15px;
 }
 
 #addLocationForm {
-    margin-top: 150px;
+    margin-top: 40px;
     text-align: center; 
     color: rgb(30, 23, 92); 
     font-family: "Inter", sans-serif;
     font-size: 13px;
-    background-color: rgb(206, 205, 221); 
-    border-radius: 5px;
-    padding: 15px;
-    margin-left: 880px;
+    background-color: #f1f1f1; 
+    border-radius: 3px;
+    padding: 30px;
+    padding-top: 110px;
+    padding-bottom: 110px;
+    margin-left: 860px;
+    align-items: center;
 }
 
 #addLocationForm button {
     font-family: "Inter", sans-serif;
     color: rgb(30, 23, 92);
     background-color: rgb(182, 180, 203);
-    font-weight: 350;
-    border-radius: 5px;
-    padding: 5px;
+    font-weight: 400;
+    border-radius: 3px;
+    padding: 10px;
+    text-decoration: none;
+    border: none;
 }
 
 input[type=text] {
