--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@ input[type=text] {
     font-family: "Inter", serif;
     color: rgb(30, 23, 92); 
     font-weight: 600;
-    border-radius: 6px;
+    border-radius: 2px;
+    border: 1px solid #c6b9d3;
 }
 input[type=text]:focus {
     border: 2px solid #9687a6;
