--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ input[type=text] {
     font-weight: 600;
     border-radius: 2px;
     border: 1px solid #c6b9d3;
+    padding: 5px;
 }
 input[type=text]:focus {
     border: 2px solid #9687a6;
@@ -149,3 +150,7 @@ textarea:focus {
     display: block;
 }
 
+#layerDropdown {
+    border-radius: 2px;
+    border: none;
+}
