--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@ h2{
     font-weight: 300;
 }
 
+.userAddedDropdown {
+    justify-content: space-evenly;
+}
 #map {
     width: 60%; 
     height: 70vh; 
